Fixed crossword layout issues

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -14,6 +14,7 @@
 
 #page
   background: white
+  overflow: scroll
 
 .nav-toggle
 #page
@@ -21,10 +22,19 @@
   transform: translate3d(0,0,0)
 
 .nav-toggle
+  background #0c1021
+  height 40px
+  width 40px
+  border none
+  color: white
+  font-size: 30px
+  padding: 5px
+  line-height: 30px
   absolute top left
   top 20px
   left 20px
   z-index 1
+
 
 .nav-drawer .nav li
   display block
